--- a/sass/_component.scss
+++ b/sass/_component.scss
@@ -108,6 +108,7 @@
 			text-align: center;
 			text-decoration: none;
 			@media screen and ( max-width: 782px ) {
+				box-sizing: border-box;
 				padding-top: 9px;
 				padding-bottom: 8px;
 				width: 100%;
