tweak floor num position

--- a/sass/_single.scss
+++ b/sass/_single.scss
@@ -51,11 +51,13 @@
 
 	.session-header {
 		margin: 0 auto;
+		padding-bottom: 2px;
 		max-width: 912px;
 		position: relative;
 		z-index: 1;
 		@media screen and ( max-width: 782px ) {
 			margin: 0 25px;
+			padding-bottom: 6px;
 		}
 		&::before {
 			content: '';
@@ -105,8 +107,9 @@
 	}
 	.session-misc {
 		margin: 0 auto;
-		padding: 2px 76px 0;
+		padding: 0 76px;
 		display: flex;
+		align-items: center;
 		max-width: 760px;
 		background-color: #fff;
 		font-weight: bold;
@@ -115,25 +118,25 @@
 		z-index: 2;
 		@media screen and ( max-width: 782px ) {
 			margin: 0 25px;
-			padding: 6px 25px 0;
+			padding: 0 25px;
 			font-size: 12px;
 		}
 		.session-date {
-		}
-		.session-place {
-			padding-left: 37px;
+			padding-right: 37px;
+			line-height: 1.4;
 			position: relative;
 			z-index: 1;
 			&::before {
 				content: '';
 				position: absolute;
-				top: 50%;
-				left: 16px;
-				margin-top: -12px;
+				top: 0;
+				right: 21px;
+				bottom: 0;
 				width: 1px;
-				height: 25px;
 				background-color: #000;
 			}
+		}
+		.session-place {
 		}
 	}
 
