--- a/sass/_single.scss
+++ b/sass/_single.scss
@@ -356,7 +356,10 @@
 	.session-date-title {
 		text-align: left;
 		@media screen and ( max-width: 782px ) {
-			font-size: 22px;
+			margin-left: -50px;
+			padding-top: 6px;
+			font-size: 20px;
+			text-align: center;
 		}
 	}
 
@@ -367,7 +370,7 @@
 		@media screen and ( max-width: 782px ) {
 			margin-top: 20px;
 			padding-bottom: 12px;
-			width: 170vw;
+			width: 150vw;
 		}
 		.room {
 			width: 418px;
@@ -389,15 +392,14 @@
 				font-weight: 600;
 				font-size: 26px;
 				@media screen and ( max-width: 782px ) {
-					padding-top: 14px;
-					padding-bottom: 15px;
-					font-size: 14px;
+					padding: 14px 25px 15px;
+					font-size: 18px;
+					text-align: left;
 				}
 				span {
 					display: block;
-					font-size: 14px;
+					font-size: 18px;
 					@media screen and ( max-width: 782px ) {
-						padding-right: .5em;
 						display: inline;
 					}
 				}
@@ -417,7 +419,7 @@
 			padding-top: 107px;
 			@media screen and ( max-width: 782px ) {
 				margin-right: -15px;
-				padding-top: 77px;
+				padding-top: 70px;
 			}
 		}
 
@@ -442,7 +444,7 @@
 				width: 2px;
 				background-color: #f2ad5c;
 				@media screen and ( max-width: 782px ) {
-					left: calc(85vw - 2px);
+					left: calc(75vw - 2px);
 				}
 			}
 		}
@@ -454,7 +456,7 @@
 			top: -121px;
 			@media screen and ( max-width: 782px ) {
 				padding-right: 15px;
-				width: 170vw;
+				width: 150vw;
 				top: -77px;
 			}
 		}
@@ -586,6 +588,7 @@
 				.sponsors {
 					a {
 						margin-top: 20px;
+						padding: 28px 0;
 						display: flex;
 						justify-content: center;
 						align-items: center;
@@ -593,15 +596,18 @@
 						min-height: 76px;
 						background-color: #fff;
 						@media screen and ( max-width: 782px ) {
+							padding: 5px 0;
 							min-height: 50px;
 						}
 					}
-					img {
-						display: block;
+					span {
 						max-width: 130px;
 						@media screen and ( max-width: 782px ) {
 							max-width: 80px;
 						}
+					}
+					img {
+						display: block;
 					}
 				}
 				.sponsor-prefix {
@@ -662,6 +668,7 @@
 	padding: 65px 76px 55px;
 	@media screen and ( max-width: 782px ) {
 		margin-top: -4px;
+		padding: 25px 25px 50px 50px;
 		display: block;
 	}
 	span {
