--- a/sass/_component.scss
+++ b/sass/_component.scss
@@ -373,14 +373,14 @@ body .a2a_kit {
 		}
 		.name-ja {
 			span {
-				padding: 3px 0;
+				padding: 3px 2px;
 				display: inline-block;
 				vertical-align: top;
 				background-color: #fff;
 				font-weight: bold;
 				font-size: 20px;
 				@media screen and ( max-width: 782px ) {
-					padding-top: 1px;
+					padding: 1px 2px;
 					line-height: 1.3;
 					font-size: 18px;
 				}
@@ -417,6 +417,7 @@ body .a2a_kit {
 		li {
 			@media screen and ( max-width: 782px ) {
 				margin-top: 25px;
+				padding: 0 50px;
 				width: 100%;
 			}
 		}
