--- a/sass/_page.scss
+++ b/sass/_page.scss
@@ -128,7 +128,6 @@
 			@media screen and ( max-width: 782px ) {
 				line-height: 1.857142857;
 				width: auto;
-				color: #fff;
 				font-size: 14px;
 			}
 			&[lang="en"] {
@@ -155,6 +154,14 @@
 			font-size: 20px;
 			text-align: center;
 			text-transform: none;
+		}
+	}
+
+	.speakers-list {
+		&.medium {
+			li {
+				margin-top: 25px;
+			}
 		}
 	}
 
