--- a/sass/_top.scss
+++ b/sass/_top.scss
@@ -105,6 +105,9 @@
 			text-align: right;
 			opacity: 1;
 		}
+		@media screen and ( max-width: 320px ) {
+			font-size: 17px;
+		}
 		&.is-inview {
 			opacity: 1;
 		}
