correct speakers list margin

--- a/sass/_top.scss
+++ b/sass/_top.scss
@@ -629,7 +629,7 @@
 		ul {
 			justify-content: flex-start;
 			@media screen and ( max-width: 782px ) {
-				margin-left: 0;
+				margin: 0;
 				padding: 0;
 			}
 		}
