--- a/sass/_frame.scss
+++ b/sass/_frame.scss
@@ -307,37 +307,38 @@ iframe, video, object{
 
 	.header-nav-toggle {
 		position: absolute;
-		top: 18px;
-		right: 25px;
+		top: 3px;
+		right: 15px;
 		z-index: 5;
-		padding: 14px 25px 0 0;
+		padding: 44px 45px 0 0;
 		display: none;
 		@media screen and ( max-width: 782px ) {
 			display: block;
 		}
 		span {
 			position: absolute;
+			left: 10px;
 			width: 25px;
 			height: 2px;
 			background-color: #000;
 			transition: all 200ms ease-out;
 			&.nav-01 {
-				top: 0;
+				top: 15px;
 			}
 			&.nav-02 {
-				top: 6px;
+				top: 21px;
 			}
 			&.nav-03 {
-				top: 12px;
+				top: 27px;
 			}
 		}
 		&.is-show {
 			span {
 				&.nav-01 {
-					top: 8px;
+					top: 23px;
 				}
 				&.nav-03 {
-					top: 8px;
+					top: 23px;
 				}
 			}
 		}
