--- a/style.css
+++ b/style.css
@@ -447,10 +447,10 @@ iframe, video, object {
 
 .header .header-nav-toggle {
   position: absolute;
-  top: 18px;
-  right: 25px;
+  top: 3px;
+  right: 15px;
   z-index: 5;
-  padding: 14px 25px 0 0;
+  padding: 44px 45px 0 0;
   display: none;
 }
 
@@ -462,6 +462,7 @@ iframe, video, object {
 
 .header .header-nav-toggle span {
   position: absolute;
+  left: 10px;
   width: 25px;
   height: 2px;
   background-color: #000;
@@ -470,23 +471,23 @@ iframe, video, object {
 }
 
 .header .header-nav-toggle span.nav-01 {
-  top: 0;
+  top: 15px;
 }
 
 .header .header-nav-toggle span.nav-02 {
-  top: 6px;
+  top: 21px;
 }
 
 .header .header-nav-toggle span.nav-03 {
-  top: 12px;
+  top: 27px;
 }
 
 .header .header-nav-toggle.is-show span.nav-01 {
-  top: 8px;
+  top: 23px;
 }
 
 .header .header-nav-toggle.is-show span.nav-03 {
-  top: 8px;
+  top: 23px;
 }
 
 .header .header-nav-toggle .collapse {
