--- a/style.css
+++ b/style.css
@@ -1662,6 +1662,12 @@ body .a2a_kit {
   }
 }
 
+.sponsor-list ul.only {
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
 .sponsor-list li {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -2676,7 +2682,6 @@ body .a2a_kit {
   line-height: 1.5;
   color: #fff;
   background-color: #000;
-  font-family: 'Heebo', sans-serif;
   font-weight: 700;
   text-decoration: none;
 }
@@ -2692,6 +2697,7 @@ body .a2a_kit {
 }
 
 .speakers-detail .speakers-session li .session-title {
+  font-family: "游ゴシック", "Yu Gothic", "游ゴシック体", YuGothic, sans-serif;
   font-size: 20px;
 }
 
@@ -2706,6 +2712,7 @@ body .a2a_kit {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  font-family: 'Heebo', sans-serif;
   font-size: 16px;
 }
 
@@ -4313,6 +4320,17 @@ body .a2a_kit {
   overflow: hidden;
 }
 
+.session-detail-content::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  z-index: 1;
+  left: 50%;
+  width: 50vw;
+  background-color: #f2ad5c;
+}
+
 .session-detail-content .session-content-inner {
   margin: 0 auto;
   padding-top: 74px;
@@ -4372,7 +4390,7 @@ body .a2a_kit {
 
 .session-detail-content .session-header {
   margin: 0 auto;
-  padding-bottom: 2px;
+  padding-bottom: 10px;
   max-width: 912px;
   position: relative;
   z-index: 1;
@@ -4424,8 +4442,9 @@ body .a2a_kit {
 }
 
 .session-detail-content .session-header .session-title {
-  margin-top: 16px;
+  margin-top: 32px;
   padding: 0 76px;
+  line-height: 1.5;
   font-weight: bold;
   font-size: 35px;
   position: relative;
