--- a/style.css
+++ b/style.css
@@ -2878,6 +2878,17 @@ body .a2a_kit {
   overflow: hidden;
 }
 
+.timetable-content::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  z-index: 1;
+  left: 50%;
+  width: 50vw;
+  background-color: #f2ad5c;
+}
+
 .timetable-content .timetable-content-inner {
   margin: 0 auto;
   padding-top: 198px;
