--- a/style.css
+++ b/style.css
@@ -4838,7 +4838,6 @@ body .a2a_kit {
 
 .session-table .timeline-header {
   margin-top: 32px;
-  padding-bottom: 13px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -4847,7 +4846,6 @@ body .a2a_kit {
 @media screen and (max-width: 782px) {
   .session-table .timeline-header {
     margin-top: 20px;
-    padding-bottom: 12px;
     width: 150vw;
   }
 }
@@ -4869,25 +4867,24 @@ body .a2a_kit {
 
 .session-table .timeline-header .room .room-inner {
   margin-right: 2px;
-  padding: 30px 10px;
+  padding: 22px 76px 23px;
   line-height: 1.2;
   background-color: #ebebeb;
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
   font-size: 26px;
+  text-align: left;
 }
 
 @media screen and (max-width: 782px) {
   .session-table .timeline-header .room .room-inner {
     padding: 14px 25px 15px;
     font-size: 18px;
-    text-align: left;
   }
 }
 
 .session-table .timeline-header .room .room-inner span {
   display: block;
-  font-size: 18px;
 }
 
 @media screen and (max-width: 782px) {
