--- a/sass/_top.scss
+++ b/sass/_top.scss
@@ -49,7 +49,7 @@
 			position: absolute;
 			top: 152px;
 			left: 50%;
-			margin-left: -683px;
+			transform: translateX(-50%);
 			width: 1366px;
 			z-index: 2;
 		}
