--- a/sass/_page.scss
+++ b/sass/_page.scss
@@ -1616,7 +1616,6 @@
 				}
 			}
 			a {
-				padding: 27px 0;
 				display: flex;
 				justify-content: center;
 				width: 265px;
@@ -1627,12 +1626,14 @@
 			}
 			.logo-wrap {
 				display: block;
-				max-width: 130px;
 				@media screen and ( max-width: 782px ) {
-					max-width: 105px;
 				}
 				img {
 					display: block;
+					width: 265px;
+					@media screen and ( max-width: 782px ) {
+						width: 173px;
+					}
 				}
 			}
 		}
