add border for sponsor logo

--- a/sass/_single.scss
+++ b/sass/_single.scss
@@ -214,10 +214,13 @@
 					@media screen and ( max-width: 782px ) {
 						display: block;
 					}
+					a, img {
+						display: block;
+					}
 					a {
 						margin-left: 20px;
+						border: 1px solid #000;
 						max-width: 157px;
-						display: block;
 						@media screen and ( max-width: 782px ) {
 							margin: 0 auto;
 						}
