tweak card padding

--- a/sass/_single.scss
+++ b/sass/_single.scss
@@ -530,7 +530,7 @@
 				left: 25px;
 			}
 			.card-inner {
-				padding: 38px 56px 89px;
+				padding: 20px 56px;
 				@media screen and ( max-width: 782px ) {
 					padding: 10px 25px 48px;
 				}
