--- a/style.css
+++ b/style.css
@@ -4989,7 +4989,7 @@ body .a2a_kit {
 }
 
 .session-table .session-items .card .card-inner {
-  padding: 38px 56px 89px;
+  padding: 20px 56px;
 }
 
 @media screen and (max-width: 782px) {
