--- a/sass/_single.scss
+++ b/sass/_single.scss
@@ -523,6 +523,8 @@
 			position: absolute;
 			left: 20px;
 			right: 20px;
+			border-top: 1px solid #fff;
+			border-bottom: 1px solid #fff;
 			background-color: #f2ad5c;
 			overflow-y: auto;
 			@media screen and ( max-width: 782px ) {
