--- a/sass/_single.scss
+++ b/sass/_single.scss
@@ -517,18 +517,19 @@
 		@media screen and ( max-width: 782px ) {
 			width: 100%;
 		}
-		&:last-child {
-		}
 		.card {
 			position: absolute;
 			left: 20px;
 			right: 20px;
-			border-bottom: 1px solid #fff;
+			border-top: 1px solid #fff;
 			background-color: #f2ad5c;
 			overflow-y: auto;
 			@media screen and ( max-width: 782px ) {
 				right: 25px;
 				left: 25px;
+			}
+			&:first-child {
+				border-top-color: transparent;
 			}
 			.card-inner {
 				padding: 20px 56px;
