--- a/style.css
+++ b/style.css
@@ -4977,7 +4977,7 @@ body .a2a_kit {
   position: absolute;
   left: 20px;
   right: 20px;
-  border-bottom: 1px solid #fff;
+  border-top: 1px solid #fff;
   background-color: #f2ad5c;
   overflow-y: auto;
 }
@@ -4987,6 +4987,10 @@ body .a2a_kit {
     right: 25px;
     left: 25px;
   }
+}
+
+.session-table .session-items .card:first-child {
+  border-top-color: transparent;
 }
 
 .session-table .session-items .card .card-inner {
