--- a/sass/_single.scss
+++ b/sass/_single.scss
@@ -531,6 +531,15 @@
 				right: 25px;
 				left: 25px;
 			}
+			&::before {
+				content: '';
+				position: absolute;
+				right: 0;
+				bottom: 0;
+				left: 0;
+				height: 1px;
+				background-color: #fff;
+			}
 			.card-inner {
 				padding: 20px 56px;
 				@media screen and ( max-width: 782px ) {
