--- a/sass/_single.scss
+++ b/sass/_single.scss
@@ -524,24 +524,19 @@
 			position: absolute;
 			left: 20px;
 			right: 20px;
+			z-index: 1;
 			border-top: 1px solid #fff;
+			border-bottom: 1px solid #fff;
 			background-color: #f2ad5c;
 			overflow-y: auto;
 			@media screen and ( max-width: 782px ) {
 				right: 25px;
 				left: 25px;
 			}
-			&::before {
-				content: '';
-				position: absolute;
-				right: 0;
-				bottom: 0;
-				left: 0;
-				height: 1px;
-				background-color: #fff;
-			}
 			.card-inner {
 				padding: 20px 56px;
+				position: relative;
+				z-index: 1;
 				@media screen and ( max-width: 782px ) {
 					padding: 10px 25px 48px;
 				}
