--- a/style.css
+++ b/style.css
@@ -4980,7 +4980,9 @@ body .a2a_kit {
   position: absolute;
   left: 20px;
   right: 20px;
+  z-index: 1;
   border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
   background-color: #f2ad5c;
   overflow-y: auto;
 }
@@ -4992,18 +4994,10 @@ body .a2a_kit {
   }
 }
 
-.session-table .session-items .card::before {
-  content: '';
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  height: 1px;
-  background-color: #fff;
-}
-
 .session-table .session-items .card .card-inner {
   padding: 20px 56px;
+  position: relative;
+  z-index: 1;
 }
 
 @media screen and (max-width: 782px) {
